--- a/Views/Home/Address.cshtml
+++ b/Views/Home/Address.cshtml
@@ -91,7 +91,7 @@
                     {
                         <li class="nav-item">
                             <a asp-controller="home" asp-action="Cart"
-                        class="nav-link font2 mx-2 item-5 text-white bottom-green active">CART</a>
+                        class="nav-link font2 mx-2 item-5 text-white bottom-orange active">CART</a>
                         </li>
                     }
                 }
@@ -99,7 +99,7 @@
                 {
                     <li class="nav-item">
                         <a asp-controller="home" asp-action="Cart"
-                        class="nav-link font2 mx-2 item-5 text-white active bottom-green">CART</a>
+                        class="nav-link font2 mx-2 item-5 text-white active bottom-orange">CART</a>
                     </li>
                 }
 
@@ -153,12 +153,12 @@
                 <p class="lh-1">India</p>
                 <p class="lh-1">Phone: 0123456789</p>
                 <a asp-controller="home" asp-action="Payment"
-                    class="btn border-0 col-12 col-lg-4 col-sm-12 col-md-6 text-white bg-rose  btn-sm fs-6 px-5 py-2 font2 rounded text-decoration-none shadow-none">Deliver
+                    class="btn border-0 all-buttons col-12 col-lg-4 col-sm-12 col-md-6 text-white bg-rose  btn-sm fs-6 px-5 py-2 font2 rounded text-decoration-none shadow-none">Deliver
                     to this address</a>
                 <div>
                     <a asp-controller="home" asp-action="EditUserProfile"
-                        class="btn  btn-secondary col-12 col-lg-2 col-md-3 col-sm-5 mt-3">Edit</a>
-                    <a class="btn  btn-secondary col-12 col-lg-2 col-md-3 col-sm-6 mt-3">Delete </a>
+                        class="btn all-buttons  btn-secondary col-12 col-lg-2 col-md-3 col-sm-5 mt-3">Edit</a>
+                    <a class="btn all-buttons btn-secondary col-12 col-lg-2 col-md-3 col-sm-6 mt-3">Delete </a>
                 </div>
             </div>
         </div>
@@ -200,7 +200,7 @@
                             </label>
                         </div>
                         <div class="d-grid gap-2 col-sm-8  pt-4 pb-5 ">
-                            <a class="btn bg-rose text-white shadow-none">Use this address</a>
+                            <a class="btn all-buttons bg-rose text-white shadow-none">Use this address</a>
                         </div>
                     </div>
                 </div>
