--- a/Views/Home/Admin.cshtml
+++ b/Views/Home/Admin.cshtml
@@ -11,7 +11,7 @@
       <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample"
         aria-labelledby="offcanvasExampleLabel">
         <div class="offcanvas-header">
-          <a asp-area="" asp-controller="Home" asp-action="Index" class= "text-decoration-none text-black"> <span class="font1 fw-bold fs-1 ms-4"> <img src="~/img/logo.png" style="width: 3rem; height: 3rem;" alt=""> Store
+          <a asp-area="" asp-controller="Home" asp-action="Index" class= "text-decoration-none text-dark"> <span class="font1 fw-bold fs-1 ms-4"> <img src="~/img/logo.png" style="width: 3rem; height: 3rem;" alt=""> Store
             To Door</span> </a>
           <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
         </div>
