--- a/Views/Home/Artist1.cshtml
+++ b/Views/Home/Artist1.cshtml
@@ -157,7 +157,7 @@
                     Acrylic Signage | Resin Art | Glass Frames | Engagement
                     Platter</p>
                 <a asp-controller="home" asp-action="CustomArt"
-                    class="btn shadow-none btn3 border-pink text-pink me-1 px-3 rounded text-decoration-none font2">
+                    class="btn shadow-none all-buttons btn3 border-pink text-pink me-1 px-3 rounded text-decoration-none font2">
                     Request custom art
                 </a>
             </div>
