--- a/Views/Home/ArtistProfile.cshtml
+++ b/Views/Home/ArtistProfile.cshtml
@@ -169,10 +169,10 @@
                 <form class="d-flex">
 
                     <a asp-controller="home" asp-action="EditArtistProfile"
-                        class="btn shadow-none btn3 border-pink text-pink me-1 px-3 rounded text-decoration-none font2 ">Edit
+                        class="btn all-buttons shadow-none btn3 border-pink text-pink me-1 px-3 rounded text-decoration-none font2 ">Edit
                         Profile</a>
                     <a asp-controller="home" asp-action="UploadArtwork"
-                        class="btn btn3 shadow-none border-pink text-pink ms-1 me-2 px-3 rounded text-decoration-none font2 ">Upload
+                        class="btn all-buttons btn3 shadow-none border-pink text-pink ms-1 me-2 px-3 rounded text-decoration-none font2 ">Upload
                         Artwork</a>
                    @* <a asp-controller="home" asp-action="CustomArtRequest"
                         class="btn btn3 shadow-none border-pink text-pink me-4 px-3 rounded text-decoration-none font2 ">Custom
@@ -218,13 +218,4 @@
     </div>
 </section>
 
-<style>
-    .aspect-16-9 {
-        aspect-ratio: 16/9;
-    }
 
-    .img-cover {
-        object-fit: cover;
-        object-position: center;
-    }
-</style>
