--- a/Views/Home/ContactUs.cshtml
+++ b/Views/Home/ContactUs.cshtml
@@ -33,7 +33,7 @@
                             </div>
                             <div class="d-grid gap-2 col-sm-6 col-12 ms-auto me-auto pt-4">
                                 <button id="login-submit" type="submit"
-                                    class="btn btn-primary rounded-pill shadow-none btn-primary">Get Help</button>
+                                    class="btn btn-primary rounded-pill shadow-none btn-primary all-buttons">Get Help</button>
                             </div>
                         </form>
                     </div>
