--- a/Views/Home/CustomArt.cshtml
+++ b/Views/Home/CustomArt.cshtml
@@ -47,7 +47,7 @@
                             </div>
                         </div>
                         <div class="d-grid gap-2 col-sm-6 col-12 ms-auto me-auto pt-3">
-                            <a href="" class="btn btn-primary rounded-pill shadow-none">Send</a>
+                            <a href="" class="btn all-buttons btn-primary rounded-pill shadow-none">Send</a>
                         </div>
                     </div>
                 </div>
