--- a/Views/Home/EditUserProfile.cshtml
+++ b/Views/Home/EditUserProfile.cshtml
@@ -88,7 +88,7 @@
                                 </div>
 
                                 <div class="d-grid gap-2 col-sm-8 ms-auto me-auto pt-3">
-                                    <button type="submit" class="btn btn-primary rounded-pill shadow-none">Save
+                                    <button type="submit" class="all-buttons btn btn-primary rounded-pill shadow-none">Save
                                         Changes</button>
                                 </div>
                             </div>
