--- a/Views/Home/Error.cshtml
+++ b/Views/Home/Error.cshtml
@@ -12,7 +12,7 @@
             <div class="flex-grow-1  col-lg-6 col-md-6 col-sm-12 col-12 error-page-text">
                 <p class="fw-bold font2 fs-1">Oops!</p> 
                 <p class="fw-bold font2 fs-3">Something went wrong!</p>
-                <a asp-action="Index" class=" btn btn-outline-warning btn-lg font2 ">Return to Home</a>
+                <a asp-action="Index" class="all-buttons btn btn-outline-warning btn-lg font2 ">Return to Home</a>
             </div>
           </div>
     </section>
