--- a/Views/Home/Shopbyartist.cshtml
+++ b/Views/Home/Shopbyartist.cshtml
@@ -144,7 +144,7 @@
                 <form class="d-flex">
                     <input class="form-control me-2 shadow-none search2" type="search" placeholder="Search for artists"
                         aria-label="Search">
-                    <button class="btn bg-pink-orange text-white shadow-none" type="submit">Search </button>
+                    <button class="btn all-buttons bg-pink-orange text-white shadow-none" type="submit">Search </button>
                 </form>
             </div>
         </div>
@@ -172,7 +172,7 @@
                         </div>
                         <div class="card-footer py-3 bg-body">
                             <a asp-controller="home" asp-action="Artist1" asp-route-id="@artist.AccountName"
-                            class="bg-pink-orange text-white px-3 py-2 my-3 mx-2 rounded text-decoration-none font2">
+                            class="bg-pink-orange all-buttons text-white px-3 py-2 my-3 mx-2 rounded text-decoration-none font2">
                                 <img class="me-1 mb-2" style="width:1rem; height=1rem" src="~/img/user.png"> View profile
                             </a>
                         </div>
