--- a/Views/Home/UploadArtwork.cshtml
+++ b/Views/Home/UploadArtwork.cshtml
@@ -73,7 +73,7 @@
                                 </div>
                             </div>
                             <div class="d-grid gap-2 col-sm-8 ms-auto me-auto pt-3">
-                                <button type="submit" class="btn btn-primary rounded-pill shadow-none">Upload</button>
+                                <button type="submit" class="all-buttons btn btn-primary rounded-pill shadow-none">Upload</button>
                             </div>
                         </div>
                     </form>
