--- a/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Areas/Identity/Pages/Account/Login.cshtml
@@ -49,7 +49,7 @@
                          <!--   <a id="forgot-password" class="text-decoration-none" asp-page="./ForgotPassword">Forgot your password?</a>-->
                         </div>      
                         <div class="d-grid gap-2 col-sm-6 col-6 ms-auto me-auto pt-4">
-                            <button id="login-submit" type="submit" class="btn btn-primary rounded-pill shadow-none btn-primary">Log in</button>
+                            <button id="login-submit" type="submit" class="btn all-buttons btn-primary rounded-pill shadow-none btn-primary">Log in</button>
                         </div>
                     </form>
                 </div>
