--- a/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Areas/Identity/Pages/Account/Register.cshtml
@@ -79,7 +79,7 @@
                                 </div>
                                 <div class="d-grid gap-2 col-sm-8 ms-auto me-auto pt-2">
                                     <button id="registerSubmit" type="submit"
-                                        class="btn btn-primary rounded-pill shadow-none btn-primary">Create Account</button>
+                                        class="btn all-buttons btn-primary rounded-pill shadow-none btn-primary">Create Account</button>
                                 </div>
                             </div>
                         </div>
