--- a/Views/Home/CancelOrder.cshtml
+++ b/Views/Home/CancelOrder.cshtml
@@ -11,7 +11,7 @@
             <div class="col-lg-12 mt-4 text-center">
                 <span class="font2 fs-5 text-red"><img src="~/img/cancelled.png" style="height: 1rem;" class="mb-1" alt=""> This
                     order has been cancelled</span><br>
-                <a asp-controller="home" asp-action="Index" class="mt-4 btn btn-outline-danger font2">Continue Shopping</a>
+                <a asp-controller="home" asp-action="Index" class="mt-4 all-buttons btn btn-outline-danger shadow-none font2">Continue Shopping</a>
             </div>
         </div>
     </section>
