--- a/Views/Home/Collection1.cshtml
+++ b/Views/Home/Collection1.cshtml
@@ -151,12 +151,12 @@
                 <div class="d-grid gap-2 col-6 mx-auto">
                     <form method="post" asp-controller="Home" asp-action="Cart">
                         <input type="hidden" name="Id" value="@ViewBag.artistCollection.Id">
-                        <button class="btn bg-pink-orange text-white  col-10 mx-auto  mx-2 rounded shadow-none font2"
+                        <button class="btn all-buttons bg-pink-orange text-white  col-10 mx-auto  mx-2 rounded shadow-none font2"
                             type="submit">Add to Cart</button>
                     </form>
                     <form method="post" asp-controller="Home" asp-action="Wishlist">
                         <input type="hidden" name="Id" value="@ViewBag.artistCollection.Id">
-                        <button class="btn bg-pink-orange text-white  col-10 mx-auto  mx-2 rounded shadow-none font2"
+                        <button class="btn all-buttons bg-pink-orange text-white  col-10 mx-auto  mx-2 rounded shadow-none font2"
                             type="submit">Add to Wishlist</button>
                     </form>
                 </div>
