--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -150,14 +150,14 @@
                 <div class="container bg1 position-absolute top-50 start-50">
                     <h1 class="text-dark font1 fw-bold">Shop For <br> The Art You'll Love</h1>
                     <a asp-controller="home" asp-action="Shopbymedium"
-                        class="btn btn1 border-0 btn-dark position-relative btn-lg mx-2 px-5 font2 ">Shop Now</a>
+                        class="btn btn1 all-buttons border-0 btn-dark position-relative btn-lg mx-2 px-5 font2 ">Shop Now</a>
                 </div>
             </div>
             <div class="carousel-item bg" style="background-image: url('/img/bg1.jpg');">
                 <div class="container bg2  position-absolute top-50 start-50">
                     <h1 class="text-dark font1 fw-bold">Create & Upload</h1>
                     <a asp-area="" asp-controller="Home" asp-action="UploadArtwork"
-                        class="btn btn1 border-0 btn-dark btn-lg position-relative px-5 mx-2  font2 ">Upload Now</a>
+                        class="btn btn1 all-buttons border-0 btn-dark btn-lg position-relative px-5 mx-2  font2 ">Upload Now</a>
                 </div>
             </div>
         </div>
@@ -260,7 +260,7 @@
         </div>
         <div class="text-center pt-4 pb-5">
             <a asp-controller="home" asp-action="Shopbymedium"
-                class="border-0 bg-purple text-white btn-lg my-3 mx-2 px-5 py-3 font2 rounded text-decoration-none">
+                class="border-0 all-buttons bg-purple text-white btn-lg my-3 mx-2 px-5 py-3 font2 rounded text-decoration-none">
                 Explore
                 More
             </a>
@@ -298,7 +298,7 @@
                         </div>
                         <div class="card-footer py-3 bg-body">
                             <a asp-controller="home" asp-action="Artist1" asp-route-id="@artist.AccountName"
-                            class="bg-pink-orange text-white px-3 py-2 my-3 mx-2 rounded text-decoration-none font2">
+                            class="bg-pink-orange all-buttons text-white px-3 py-2 my-3 mx-2 rounded text-decoration-none font2">
                                 <img class="me-1 mb-2" style="width:1rem; height=1rem" src="~/img/user.png"> View profile
                             </a>
                         </div>
@@ -318,7 +318,7 @@
                     </div>
                     <div class="card-footer py-3 bg-body">
                         <a asp-area="Identity" asp-page="/Account/Register"
-                            class="bg-pink-orange text-white px-3 py-2 my-3 mx-2 rounded text-decoration-none font2">
+                            class="bg-pink-orange all-buttons text-white px-3 py-2 my-3 mx-2 rounded text-decoration-none font2">
                             <img class="me-1 mb-2" style="width:1rem; height=1rem" src="~/img/user.png"> Signup
                         </a>
                     </div>
@@ -326,7 +326,7 @@
             </div>
             <div class="text-center pb-5 mb-5">
                 <a asp-controller="home" asp-action="Shopbyartist"
-                    class="btn btn2 border-0 btn-dark btn-lg mx-2 px-5 font2 ">Find artist</a>
+                    class="btn btn2 all-buttons border-0 btn-dark btn-lg mx-2 px-5 font2 ">Find artist</a>
             </div>
         </div>
     </div>
