--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -16,7 +16,7 @@
 
         <li class="nav-item">
             <form class="form-inline text-center" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-                <button type="submit" class="ms-3 my-2 nav-link btn btn-outline-danger btn-link text-dark">Logout</button>
+                <button type="submit" class="ms-3 my-2 nav-link btn btn-outline-danger btn-link all-buttons text-dark">Logout</button>
             </form>
         </li>
     }
@@ -28,8 +28,8 @@
         <li class="ms-3 font2 fs-5 pt-2">WELCOME!</li>
         <li class="ms-3 mb-2">To access account and manage order</li>
         <form class="d-flex">
-            <a asp-area="Identity" asp-page="/Account/Register" class="btn btn-outline-danger ms-4 me-1 px-3 mb-2">Signup</a>
-            <a asp-area="Identity" asp-page="/Account/login" class="btn btn-outline-danger me-4 ms-1 px-3 mb-2">Login</a>
+            <a asp-area="Identity" asp-page="/Account/Register" class="btn all-buttons btn-outline-danger ms-4 me-1 px-3 mb-2">Signup</a>
+            <a asp-area="Identity" asp-page="/Account/login" class="btn all-buttons btn-outline-danger me-4 ms-1 px-3 mb-2">Login</a>
         </form>
     }
 </ul>
