--- a/wwwroot/css/project.css
+++ b/wwwroot/css/project.css
@@ -4,48 +4,40 @@
 /* Colors using variables */
 :root {
     --heaven: white;
-    /* --primary:black; */
-    --ternary: rgba(0,0,0,0.3);
+   /*  --primary:rgb(58, 57, 57);*/
+    --ternary: rgba(0,0,0,0.3); /*Transparent*/
     --secondary: rgb(43, 159, 226);
     --red: #ee5253;
     --yellow: #d2d22c;
-    /* --green:#7aebc9; */
-    --green: #4bcea6;
+    /*--green: #4bcea6;*/
     --dark-green: rgb(26, 150, 26);
-    /* --green1: rgba(106, 201, 157, 1.00); */
     --light-pink: rgb(250, 135, 206);
     --purple: rgb(199, 112, 216);
-    /* --orange:#fb8c00; */
     --pink: #e84393;
     --orange: #fc9a54;
-    --yellow2: #f1c40f;
     --rose: #E983D8;
 }
 /* Utility Classes  */
-/* font */
+/* Font */
 .font1 {
     font-family: 'Licorice', cursive;
 }
-
 .font2 {
     font-family: 'Noto Sans', sans-serif;
 }
-/* text-colors*/
+/* Text-colors*/
 .text-blue {
     color: var(--secondary);
 }
-
 .text-purple {
     color: var(--purple);
 }
-
 .text-pink {
     color: var(--pink);
 }
-
-.text-green {
+/*.text-green {
     color: var(--green);
-}
+}*/
 .text-rose {
     color: var(--rose);
 }
@@ -62,60 +54,61 @@
 .bg-blue {
     background-color: var(--secondary);
 }
-
 .bg-purple {
     background-color: var(--purple);
 }
-
 .bg-pink-orange {
     background-image: linear-gradient(var(--pink),var(--orange));
 }
-
-.bg-blue-yellow {
-    background-image: linear-gradient(var(--secondary),var(--yellow2));
-}
-
 .bg-light-pink {
     background-color: var(--light-pink);
 }
-
-.bg-green {
-    background-color: var(--green);
-}
+/*.bg-dark-green {
+    background-color: var(--dark-green);
+}*/
 .bg-rose{
     background-color:var(--rose);
 }
 .bg-orange {
     background-color: var(--orange);
 }
-/* border-color */
-.border-pink {
+/* Border-color */
+.border-pink, .search2:focus {
     border: 1px solid var(--light-pink);
 }
-
 .bottom-yellow, .item-1:hover {
     border-bottom: 3px solid var(--yellow);
 }
-
 .bottom-blue, .item-2:hover {
     border-bottom: 3px solid var(--secondary);
 }
-
 .bottom-purple, .item-3:hover {
     border-bottom: 3px solid var(--purple);
 }
-
 .bottom-red, .item-4:hover {
     border-bottom: 3px solid var(--red);
 }
-
-.bottom-green, .item-5:hover {
-    border-bottom: 3px solid var(--green);
+.bottom-orange, .item-5:hover {
+    border-bottom: 3px solid var(--orange);
 }
-
 .bottom-pink, .item-6:hover {
     border-bottom: 3px solid var(--pink);
 }
+/*Buttons*/
+.btn1 {
+    left: 8rem;
+    top: 2rem;
+}
+.btn3:hover {
+    background-color: var(--pink);
+}
+.all-buttons {
+    transition: all .5s ease-in-out;
+}
+.all-buttons:hover,.navbar-brand{
+    text-shadow: 0 0 10px rgba(255,255,255, 1), 0 0 85px rgba(255, 255, 255, .1);
+}
+/*Home Page*/
 /* nav */
 .navbar {
     background-color: var(--ternary); /*for transparent nav*/
@@ -123,42 +116,27 @@
 .drop1:active {
     background-color: var(--purple);
 }
-
 .drop2:active {
     background-color: var(--red);
 }
-
-.drop3:active {
-    background-color: var(--green);
-}
-
-.drop3-menu {
-    min-width: 8rem !important;
-}
-
 .active {
     font-weight: bold;
 }
-
 .search-box, .search-btn {
     height: 2.3rem;
 }
-
 .search-btn {
     width: 2.3rem;
     transition: all 0.4s ease 0s;
 }
-
 .search-box:hover > .search-txt {
     width: 10rem;
     padding: 0 1rem;
     margin: -8px;
 }
-
-.search-box:hover, .search-btn {
+/*.search-box:hover, .search-btn {
     background-color: var(--primary);
-}
-
+}*/
 .search-txt {
     border: none;
     background: none;
@@ -172,21 +150,18 @@
     margin-right:1rem;
 }
 /* Carousal */
-.btn1:hover, .btn2:hover {
-    background-color: rgb(58, 57, 57);
+.container-fluid {
+    padding-left: 0;
 }
-
 .bg {
     background-attachment: fixed;
     min-height: 100vh;
     background-position: center;
     background-size: cover;
 }
-
 .bg>.bg2, .btn1 {
    transform: translate(-49%,-90%);
 }
-
 .bg>.bg1, .btn1 {
    transform: translate(-62%,-55%);
    text-align: end;
@@ -197,14 +172,8 @@
     top: 20rem;
     left: 43.1rem;
 } */
-
 .container > h1 {
     font-size: 5.2rem;
-}
-
-.btn1 {
-    left: 8rem;
-    top: 2rem;
 }
 /* Section 1 */
 .heading {
@@ -212,45 +181,21 @@
     letter-spacing: 0.17rem;
 }
 /* Footer */
-.footer-list:hover {
+.footer-list:hover, .btn3:hover {
     color: var(--heaven) !important;
 }
-
-/* @media screen and (min-width:330px) and (max-width: 576px){ 
-   .img-info {
-        height: 300px !important;
-        width: 300px !important;
-    }
- } */
-/* .page-item.active .page-link{
-     background-color: var(--light-pink);
-     border: none;
- } */
-
+/*Cart*/
 .order > input:focus {
-    border: 1px solid #4bcea6;
+    border: 1px solid var(--orange);
 }
-
-.search2:focus {
-/*scrollbar-3dlight-color */   border: 2px solid pink;
-}
-
+/*Error Page*/
 .error-page {
     text-align: end;
 }
-
-    .error-page > img {
-        height: 25rem;
-    }
-
-.btn3:hover {
-    background-color: var(--pink);
-    color: var(--heaven);
+.error-page > img {
+    height: 25rem;
 }
-
-.container-fluid {
-    padding-left: 0;
-}
+/*Address Page*/
 .new-address:focus, new-address:checked {
     border: 1px solid var(--rose);
 }
@@ -258,15 +203,21 @@
     background-color: var(--rose);
 }
 .text-area:focus{
-border:1px solid var(--purple);
+    border:1px solid var(--purple);
 }
-
+/*Artist-profile*/
+.aspect-16-9 {
+    aspect-ratio: 16/9;
+}
+.img-cover {
+    object-fit: cover;
+    object-position: center;
+}
 @media screen and (min-width:250px) and (max-width: 450px) {
     .text-box {
         display: flex;
         flex-direction: column;
     }
-
     .btn1 {
         left: 6rem;
     }
@@ -279,11 +230,7 @@ border:1px solid var(--purple);
     .logo-img {
         margin-right: 0rem;
     } 
-    /*.logout{
-        display:none;
-    }*/
 }
-
 @media screen and (min-width:450px) and (max-width: 1800px) {
     .text-box {
         display: flex;
@@ -292,11 +239,7 @@ border:1px solid var(--purple);
     .container > h1 {
         font-size: 4rem;
     }
-   /* .logout-offcanvas {
-        display: none;
-    }*/
 }
-
 @media screen and (min-width:200px) and (max-width: 990px) {
     .login-section {
         display: none;
