--- a/Views/Home/Shopbyartist.cshtml
+++ b/Views/Home/Shopbyartist.cshtml
@@ -166,8 +166,7 @@
                             }
                             <h5 class="card-title mt-2">@artist.FirstName @artist.LastName</h5>
                             <p class="card-text fs-6">
-                                Handmade Giftings | String Art | Acrylic Signage | Glass Frames |
-                                Engagement Platter
+                                 @artist.Bio
                             </p>
                         </div>
                         <div class="card-footer py-3 bg-body">
