--- a/Views/Home/UploadArtwork.cshtml
+++ b/Views/Home/UploadArtwork.cshtml
@@ -43,18 +43,18 @@
                                     </div>*@
                                 <div>
                                     <label class="pb-2" for="autoSizingSelect">Category</label>
-                                    <select class="form-select" id="autoSizingSelect">
+                                    <select class="form-select" id="autoSizingSelect" name="Category">
                                         <option selected>Choose...</option>
-                                        <option value="1">Painting</option>
-                                        <option value="2">Drawing</option>
-                                        <option value="3">Origami</option>
-                                        <option value="4">String Art</option>
-                                        <option value="5">Sketches</option>
-                                        <option value="6">Room Decor</option>
-                                        <option value="7">Wall Art</option>
-                                        <option value="8">Pottery</option>
-                                        <option value="9">Frame</option>
-                                        <option value="10">Any Other</option>
+                                        <option value="Painting">Painting</option>
+                                        <option value="Drawing">Drawing</option>
+                                        <option value="Origami">Origami</option>
+                                        <option value="String Art">String Art</option>
+                                        <option value="Sketches">Sketches</option>
+                                        <option value="Room Decor">Room Decor</option>
+                                        <option value="Wall Art">Wall Art</option>
+                                        <option value="Pottery">Pottery</option>
+                                        <option value="Frame">Frame</option>
+                                        <option value="Any Other">Any Other</option>
                                     </select>
                                 </div>
                             </div>
@@ -69,7 +69,7 @@
                                     <label for="exampleFormControlTextarea" class="form-label">
                                         Description
                                     </label>
-                                    <textarea class="form-control" id="exampleFormControlTextarea" rows="1"></textarea>
+                                    <textarea class="form-control" id="exampleFormControlTextarea" rows="1" name="Description"></textarea>
                                 </div>
                             </div>
                             <div class="d-grid gap-2 col-sm-8 ms-auto me-auto pt-3">
