--- a/Views/Home/ArtistProfile.cshtml
+++ b/Views/Home/ArtistProfile.cshtml
@@ -188,8 +188,8 @@
             </thead>
         </table>
         <div class="row g-4">
-            @* @if (ViewBag.collection)
-            {*@
+            @if (ViewBag.ColCount!=0)
+            {
                 @foreach (var collection in ViewBag.artistCollection)
                 {
                     <div class="col-12 col-lg-4 col-md-6 ">
@@ -202,19 +202,21 @@
                                 <span>Size: @collection.Size</span>
                                 <span>Category: @collection.Category</span>
                                 <span>Price: @collection.Price</span>
+                                <span>Description: @collection.Description</span>
                             </p>
                         </div>
                     </div>
                 </div>
 
-            }
-            @*}*@
-        </div>
-        @*else{*@
-        <div class="my-5 py-5">
+                }
+            }else{
+                <div class="my-5 py-5">
             <p class="text-center">You have not uploaded any images</p>
         </div>
-        @*}*@
+            }
+        </div>
+
+
     </div>
 </section>
 
